# tensorflow

./: WORKSPACE
tensorflow/lite/: build_def.bzl
tensorflow/lite/examples/cpp_inference_demo/: BUILD.bazel  b.sh  create_tflite_model.py  inf.cc  linear.tflite  readme.md
tensorflow/lite/examples/cpp_inference_demo/saved_model/: saved_model.pb
tensorflow/lite/examples/cpp_inference_demo/saved_model/variables/: variables.data-00000-of-00001  variables.data-00000-of-00002  variables.data-00001-of-00002  variables.index
